Complete configuration proyect and file create data.sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
-spring.application.name=reservationpage
+# Core
+spring.profiles.active=h2
+#server.port=5000
+server.port=8080
+
+#base end-points config
+api-endpoint = /api/v1
+
+# Files
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+# Static resources path
+spring.mvc.static-path-pattern=/api/v1/**
+
+# Set cookies to same-site=none
+#server.servlet.session.cookie.same-site=none
+#server.servlet.session.cookie.secure=true
+
+
