--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ server.port=8080
 #base end-points config
 api-endpoint = /api/v1
 
+#stripe-secret-key = ${STRIPE_SECRET_KEY}
+#aws-bucket-name = ${AWS_BUCKET_NAME}
+
 # Files
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
@@ -14,7 +17,7 @@ spring.servlet.multipart.max-request-size=100MB
 spring.mvc.static-path-pattern=/api/v1/**
 
 # Set cookies to same-site=none
-#server.servlet.session.cookie.same-site=none
-#server.servlet.session.cookie.secure=true
+# server.servlet.session.cookie.same-site=none
+# server.servlet.session.cookie.secure=true
 
 
